; ModuleID = '/home/carl/AnghaBench/libsodium/src/libsodium/crypto_box/curve25519xchacha20poly1305/extr_box_seal_curve25519xchacha20poly1305.c_crypto_box_curve25519xchacha20poly1305_seal_open.c'
source_filename = "/home/carl/AnghaBench/libsodium/src/libsodium/crypto_box/curve25519xchacha20poly1305/extr_box_seal_curve25519xchacha20poly1305.c_crypto_box_curve25519xchacha20poly1305_seal_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@crypto_box_curve25519xchacha20poly1305_NONCEBYTES = common dso_local global i32 0, align 4
@crypto_box_curve25519xchacha20poly1305_SEALBYTES = common dso_local global i64 0, align 8
@crypto_box_curve25519xchacha20poly1305_PUBLICKEYBYTES = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @crypto_box_curve25519xchacha20poly1305_seal_open(i8* %0, i8* %1, i64 %2, i8* %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32, align 4
  store i8* %0, i8** %7, align 8
  store i8* %1, i8** %8, align 8
  store i64 %2, i64* %9, align 8
  store i8* %3, i8** %10, align 8
  store i8* %4, i8** %11, align 8
  %15 = load i32, i32* @crypto_box_curve25519xchacha20poly1305_NONCEBYTES, align 4
  %16 = zext i32 %15 to i64
  %17 = call i8* @llvm.stacksave()
  store i8* %17, i8** %12, align 8
  %18 = alloca i8, i64 %16, align 16
  store i64 %16, i64* %13, align 8
  %19 = load i64, i64* %9, align 8
  %20 = load i64, i64* @crypto_box_curve25519xchacha20poly1305_SEALBYTES, align 8
  %21 = icmp ult i64 %19, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %5
  store i32 -1, i32* %6, align 4
  store i32 1, i32* %14, align 4
  br label %42

23:                                               ; preds = %5
  %24 = load i8*, i8** %8, align 8
  %25 = load i8*, i8** %10, align 8
  %26 = call i32 @_crypto_box_curve25519xchacha20poly1305_seal_nonce(i8* %18, i8* %24, i8* %25)
  %27 = load i64, i64* @crypto_box_curve25519xchacha20poly1305_PUBLICKEYBYTES, align 8
  %28 = load i64, i64* @crypto_box_curve25519xchacha20poly1305_SEALBYTES, align 8
  %29 = icmp ult i64 %27, %28
  %30 = zext i1 %29 to i32
  %31 = call i32 @COMPILER_ASSERT(i32 %30)
  %32 = load i8*, i8** %7, align 8
  %33 = load i8*, i8** %8, align 8
  %34 = load i64, i64* @crypto_box_curve25519xchacha20poly1305_PUBLICKEYBYTES, align 8
  %35 = getelementptr inbounds i8, i8* %33, i64 %34
  %36 = load i64, i64* %9, align 8
  %37 = load i64, i64* @crypto_box_curve25519xchacha20poly1305_PUBLICKEYBYTES, align 8
  %38 = sub i64 %36, %37
  %39 = load i8*, i8** %8, align 8
  %40 = load i8*, i8** %11, align 8
  %41 = call i32 @crypto_box_curve25519xchacha20poly1305_open_easy(i8* %32, i8* %35, i64 %38, i8* %18, i8* %39, i8* %40)
  store i32 %41, i32* %6, align 4
  store i32 1, i32* %14, align 4
  br label %42

42:                                               ; preds = %23, %22
  %43 = load i8*, i8** %12, align 8
  call void @llvm.stackrestore(i8* %43)
  %44 = load i32, i32* %6, align 4
  ret i32 %44
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @_crypto_box_curve25519xchacha20poly1305_seal_nonce(i8*, i8*, i8*) #2

declare dso_local i32 @COMPILER_ASSERT(i32) #2

declare dso_local i32 @crypto_box_curve25519xchacha20poly1305_open_easy(i8*, i8*, i64, i8*, i8*, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
